# practica

./: .gitignore  BroadcastSummary.txt  CMakeLists.txt  Channel.txt  Program.txt  main.cpp  tvmodule.cpp  tvmodule.h
Word/: Raport.docx
